# active_learning

./: .gitignore  01_plot_data.py  04_train_model.py  05_predict_latent_embedding.py  06_latent_space_viewer.py  07_train_semisupervided_model.py  08_predict_latent_embedding_Semisupervised.py  09_EPM_noise_analysis.ipynb  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMPONENT_AWARE_DECODER_ABLATION.md  COMPONENT_AWARE_DECODER_VALIDATION.md  DASHBOARD_SYSTEM_SPEC.md  DOCUMENTATION_RESTRUCTURING_SUMMARY.md  EXPERIMENT_GUIDE.md  HETEROSCEDASTIC_DECODER_PLAN.md  HETEROSCEDASTIC_DECODER_SESSION_SUMMARY.md  PROJECT_STATE.md  README.md  REFACTORING_SPEC_TAU_CLASSIFIER.md  SESSION_NOTES.md  TAU_CLASSIFIER_EXPERIMENT_ANALYSIS.md  TAU_CLASSIFIER_IMPLEMENTATION_REPORT.md  TAU_CLASSIFIER_VALIDATION_RESULTS.md  TAU_CLASSIFIER_VALIDATION_SUMMARY.md  VERIFICATION_CHECKLIST.md  VERIFICATION_RESULTS.md  model_profile_2.pptx  plan.md  pyproject.toml  requirements.txt  run_tau_validation.py  test_load_migrated.py  test_model_commands.py  test_tau_classifier_basic.py  tmp_interactive.ckpt  verify_custom_loop.py  verify_tau_integration.py
.claude/: settings.local.json
.devcontainer/: README.md  devcontainer.json
configs/: README.md  __init__.py  ablation_entropy_reward.yaml  ablation_entropy_reward_100labels.yaml  ablation_entropy_reward_10labels.yaml  ablation_uniform_push.yaml  base.py  comparison_full.yaml  comparison_quick_test.yaml  default.yaml  golden_baseline.yaml  mixture_100labels.yaml  mixture_10labels.yaml  mixture_50labels.yaml  mixture_ablation_standard_decoder.yaml  mixture_example.yaml  mixture_k20.yaml  mixture_k50.yaml  mixture_quick.yaml  mixture_quick_test.yaml  quick.yaml  single_model_example.yaml  training_config.yaml
data/: __init__.py
docs/: CLEANUP_NOTES.md  CONTEXT.md  CONTRIBUTING.md  DASHBOARD_IMPLEMENTATION.md  DEVELOPMENT_METHODOLOGY.md  GETTING_STARTED.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  STRUCTURE.md  USAGE.md  VERIFICATION.md
domain/: vae_model.py
experiments/: README.md  collect_results.py  experiment_utils.py  generate_labels.py  run_experiment.py  run_label_efficiency.sh  validate_tau_classifier.py
model_components/: __init__.py  classifier.py  decoders.py  encoders.py  factory.py
models/: __init__.py  classifier.py  factory.py  ssvae_2d.weights.h5
notebooks/: showcase_ssvae.ipynb
scripts/: compare_models.py  comparison_utils.py  diagnostics.py  infer.py  infer_tf.py  plot_mnist.py  run_experiment.py  test_conv.py  train.py  train_tf.py  tune.py  verify_mixture_prior.py  view_latent.py
src_tf/: __init__.py  vae_model_jax.py  vae_model_tf.py
ssvae/: __init__.py  models.py
tests/: conftest.py  run_dashboard_tests.py  test_backward_compatibility.py  (+21 more)
(+494 files in other folders)
