[tool.poetry]
name = "active-learning-ssvae"
version = "0.1.0"
description = "Semi-Supervised Variational Autoencoder for Active Learning"
authors = ["Andreas Carasiov"]
readme = "README.md"
packages = [{include = "ssvae"}, {include = "configs"}, {include = "model_components"}, {include = "training"}]

[tool.poetry.dependencies]
python = "^3.11"
jax = {extras = ["cuda12"], version = ">=0.4.20,<0.4.34"}
flax = "^0.8.0"
optax = "^0.1.9"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
