[tool.poetry]
name = "active-learning-ssvae"
version = "0.1.0"
description = "Semi-Supervised Variational Autoencoder for Active Learning"
authors = ["Andreas Carasiov"]
readme = "README.md"
packages = [
    { include = "model", from = "src" },
    { include = "infrastructure", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
jax = "0.4.27"
jaxlib = {url = "https://storage.googleapis.com/jax-releases/cuda12/jaxlib-0.4.27+cuda12.cudnn89-cp311-cp311-manylinux2014_x86_64.whl"}
flax = "^0.8.0"
optax = "^0.1.9"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
dash = "^2.15.0"
dash-bootstrap-components = "^1.6.0"
plotly = "^5.18.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
pytest = "^7.4.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
